# ydlite

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/: _headers
src/: App.vue  LandingPage.vue  main-web.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  errors.rs  lib.rs  main.rs  progress.rs  tool_installer.rs  tool_paths.rs  ytdlp.rs
src/api/: tauri.ts
