[package]
name = "ydlite"
version = "0.1.0"
description = "A local yt-dlp desktop downloader."
authors = ["YDLite"]
edition = "2021"

[lib]
name = "ydlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
regex = "1.11.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
url = "2.5.4"
zip = "6.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
